# mini-ep

./: EXPLANATION.md  README.md  pyproject.toml
miniep/: __init__.py  balancer.py  ep.py  modeling.py  prompts.py  server.py  weights.py  worker.py
results/: bench_balanced.json  bench_naive.json  expert_load_parity.json  expert_load_skew.json  gatea.json  gateb_world2.json  gateb_world4.json  plan_balanced.json  reference.json
scripts/: check_parity.py  demo_serve.py  make_charts.py  make_plan.py  reference.py
