[project]
name = "miniep"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "huggingface-hub[cli]>=1.24.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "safetensors>=0.8.0",
    "torch>=2.13.0",
    "transformers>=5.14.1",
    "uvicorn>=0.51.0",
]
